Project displaying and styled

--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -1,7 +1,46 @@
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-image: url('./sw-bg.jpg');
   background-size: cover;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2rem;
+}
+p {
+  font-size: 1.6rem;
+}
+li {
+  font-size: 1.7rem;
+}
+.container {
+  max-width: 880px;
+  margin: 0 auto;
+}
+.App .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.App .cards .card {
+  text-align: left;
+  background-color: #72989B;
+  color: white;
+  width: 30%;
+  padding: 0 2%;
+  margin: 0 10px 20px 10px;
+  border-radius: 5px;
+}
+.App .cards .card .describe li {
+  padding: 5px 5%;
 }
