Added a working search bar

--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -10,11 +10,13 @@ body {
   font-family: sans-serif;
   background-image: url('./sw-bg.jpg');
   background-size: cover;
+  background-attachment: fixed;
 }
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
-h2 {
+h2,
+h4 {
   font-size: 2rem;
 }
 p {
@@ -27,6 +29,29 @@ li {
   max-width: 880px;
   margin: 0 auto;
 }
+.App {
+  text-align: center;
+}
+.App .Header {
+  color: #443e3e;
+  text-shadow: 1px 1px 5px #fff;
+}
+.App form {
+  text-align: left;
+}
+.App form h4 {
+  margin: 0 0 5px 0;
+}
+.App form input {
+  width: 30%;
+  padding: 5px 10px;
+  margin-bottom: 10px;
+  background-color: #443e3e;
+  color: white;
+  border: 1px solid #443e3e;
+  border-radius: 5px;
+  font-size: 1.6rem;
+}
 .App .cards {
   display: flex;
   flex-wrap: wrap;
@@ -38,7 +63,7 @@ li {
   color: white;
   width: 30%;
   padding: 0 2%;
-  margin: 0 10px 20px 10px;
+  margin: 10px 0;
   border-radius: 5px;
 }
 .App .cards .card .describe li {
