--- a/starwars/src/less/index.less
+++ b/starwars/src/less/index.less
@@ -12,13 +12,15 @@ body {
   font-family: sans-serif;
   background-image: url('./sw-bg.jpg');
   background-size: cover;
+  background-attachment: fixed;
+  
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
 
-h2 {
+h2, h4 {
   font-size: 2rem;
 }
 
@@ -36,6 +38,31 @@ li {
 }
 
 .App {
+  text-align: center;
+
+  .Header {
+    color: #443e3e;
+    text-shadow: 1px 1px 5px #fff;
+  }
+
+  form {
+    text-align: left;
+
+    h4 {
+      margin: 0 0 5px 0;
+    }
+
+    input {
+      width: 30%;
+      padding: 5px 10px;
+      margin-bottom: 10px;
+      background-color: #443e3e;
+      color: white;
+      border: 1px solid #443e3e;
+      border-radius: 5px;
+      font-size: 1.6rem;
+    }
+  }
   
   .cards {
     display: flex;
@@ -48,7 +75,7 @@ li {
       color: white;
       width: 30%;
       padding: 0 2%;
-      margin: 0 10px 20px 10px;
+      margin: 10px 0;
       border-radius: 5px;
 
       .describe {
